# Piscine-42

./: .gitignore  CMakeLists.txt  return_one.h  sonar-project.properties  test_return_one.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  codeql.yml  flawfinder.yml  msvc.yml  mutationtesting.yml
src/main/: return_one.c
src/test/: test_return_one.cpp
